+ Fixing flicker in menuy opening

--- a/assets/component-menu-drawer.css
+++ b/assets/component-menu-drawer.css
@@ -124,11 +124,17 @@ menu-drawer>details[open]>summary::before {
   z-index: 0;
   color: rgb(var(--color-base-text-2));
   top: 3.5rem;
+  /* Prevent flickering on first open */
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .menu-drawer-container.menu-open .menu-drawer {
   animation: headerDrawerOpen .6s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
   pointer-events: all;
+  opacity: 1;
+  visibility: visible;
 }
 
 .menu-drawer-container.menu-close .menu-drawer {
